added contact id to nav bar

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </p></div>
         </div>
 
-        <div class="contact">
+        <div class="contact" id="contact">
             <div class="banner">
                 <div class="take-action">
                     <div class="banner-text">
